[project]
name = "marimotest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.3.2",
    "marimo>=0.14.12",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "polars[pyarrow]>=1.31.0",
    "pyarrow>=21.0.0",
    "pyplotlib>=0.0.56",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "sqlglot>=27.0.0",
]
