[project]
name = "marimotest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "cwk-word-utils @ git+https://github.com/cwkingjr/cwk-word-utils.git@main",
    "duckdb>=1.3.2",
    "marimo>=0.14.17",
    "matplotlib>=3.10.5",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "polars[pyarrow]>=1.32.3",
    "pyarrow>=21.0.0",
    "pyplotlib>=0.0.56",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "sqlglot>=27.0.0",
]
